# mHC-gsm8k

./: nia-sources.md  prd.md
controller/: __init__.py  features.py
envs/: gsm8k_env.py
mHC-manifold-constrained-hyper-connections/: .gitignore  README.md  pyproject.toml
mHC-manifold-constrained-hyper-connections/examples/nanogpt/: configurator.py  model.py  run_48l_ablations.sh  train.py
mHC-manifold-constrained-hyper-connections/examples/nanogpt/config/: train_fineweb10B.py  train_fineweb10B_48l.py  train_fineweb10B_hc.py  train_fineweb10B_hc_48l.py  train_fineweb10B_mhc.py  train_fineweb10B_mhc_48l.py  train_fineweb10B_vres.py  train_fineweb10B_vres_48l.py  train_shakespeare_char.py  train_shakespeare_char_20m.py  train_shakespeare_char_20m_hc.py  train_shakespeare_char_hc.py
nanochat/: sanity_mhc.sh
nanochat-mHC/: README.md  compile_sanity_mhc.sh  sanity_mhc.sh  speedrun_mhc.sh
nanochat-mHC/configs/: default.yaml  mhc_sanity.yaml
nanochat-mHC/dev/: generate_logo.html
nanochat-mHC/nanochat/: gpt.py  mhc.py  ui.html
nanochat-mHC/scripts/: base_train.py  upload_to_hf.py
nanochat/nanochat/: gpt.py  mhc.py
nanochat/scripts/: base_train.py
routing/: __init__.py  mixing_ops.py  multistream_wrapper.py
scripts/: test_routing.py
tests/: test_routing_comprehensive.py
train/: __init__.py  reinforce_train.py
