[project]
name = "mhc-hyper-connections"
version = "0.1.0"
description = "Manifold-Constrained Hyper-Connections (mHC) - research implementation"
authors = [
    { name = "tokenbender", email = "theartoftokenbending@gmail.com" },
]
readme = "README.md"
requires-python = ">= 3.9"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'residual',
    'hyper-connections',
    'mhc',
    'doubly-stochastic',
]

classifiers=[
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3.9',
]

dependencies = [
    "einops>=0.8.0",
    "torch>=2.3",
    "pytest>=8.2.0",
    "basedpyright>=1.21.0",
    "numpy>=1.26.0",
    "wandb>=0.16.0",
]

[project.urls]
Repository = "https://github.com/tokenbender/mHC-manifold-constrained-hyper-connections"

[project.optional-dependencies]
examples = [
    "huggingface-hub>=0.20.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["hyper_connections"]
